# translatex

./: .editorconfig  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.fr.md  README.md  TODO.md  extract_changelog.py  pyproject.toml
docs/: Makefile
docs/source/: cli-synopsis.md  conf.py  index.md
docs/source/examples/: irma.py  textsynth.py
docs/source/modules/: data.md  index.md  init.md  main.md  marker.md  preprocessor.md  tokenizer.md  translatex.md  translator.md
examples/: README.fr.md  README.md  erken.tex  lorem.tex  simple.tex  translatex.bib  translatex.tex  wrapped.tex
src/translatex/: __init__.py  data.py  main.py  marker.py  preprocessor.py  tokenizer.py  translatex.py  translator.py
tests/: conftest.py  custom.py  test_main.py  test_marker.py  test_preprocessor.py  test_tokenizer.py  test_translatex.py  test_translator.py
tests/fixtures/: fixt_markers.py  fixt_preprocessors.py  fixt_tokenizers.py  fixt_translators.py
tests/texfiles/: helloworld.tex
