[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "translatex"
authors = [{ name = "Efe ERKEN", email = "efe.erken@math.unistra.fr" }]
description = "Un logiciel pour la traduction automatique de documents scientifiques écrits dans le langage LaTeX."
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "TexSoup @ git+https://github.com/alvinwan/TexSoup@c91a14a0019ff7df197e71c906bc0403eddf80dc",
    "regex",
    "googletrans==4.0.0rc1",
    "deepl",
    "requests",
    "nltk"
]
dynamic = ["version"]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
doc = [
    "Sphinx >= 7.2.2",
    "myst-parser",
    "furo",
    "sphinx-copybutton",
    "sphinx-autobuild",
    "sphinx-prompt",
    "sphinx-last-updated-by-git"
]
dev = ["pre-commit"]

[project.license]
text = "MIT"

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://gitlab.math.unistra.fr/cassandre/translatex"

[project.scripts]
"translatex" = "translatex.main:main"

[tool.setuptools]
include-package-data = true
license-files = ["LICENSE"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools.dynamic.version]
attr = "translatex.__version__"

[tool.black]
line-length = 79
target-version = ["py38", "py39", "py310"]

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 79
